--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li><a href="#">Biz haqimizda</a></li>
                         <li><a href="#mahsulotlar">Bizning mahsulotlarimiz</a></li>
-                        <li><a href="#">Yetkazib berish</a></li>
+                        <li><a href="/pages/boglanish.html">Yetkazib berish</a></li>
                     </ul>
                 </nav>
                 
