--- a/pages/office.html
+++ b/pages/office.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/office.css">
+     <link rel="shortcut icon" href="/assets/logo.svg" type="image/x-icon" />
     <title>Office</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
                     <ul>
                         <li><a href="/index.html">Biz haqimizda</a></li>
                         <li><a href="/index.html#mahsulotlar">Bizning mahsulotlarimiz</a></li>
-                        <li><a href="#">Yetkazib berish</a></li>
+                        <li><a href="/pages/boglanish.html">Yetkazib berish</a></li>
                     </ul>
                 </nav>
                 
